# flaxattention

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml
examples/: benchmark.py  benchmark_decoding.py  benchmark_torch.py  benchmark_torch_decoding.py  example.py  test.py
flaxattention/: __init__.py  utils.py
flaxattention/core/: attention.py  blockmask.py  common.py
flaxattention/kernel/: attention.py
flaxattention/masks/: __init__.py  attention_sink.py  causal.py  sliding_window.py
flaxattention/mods/: __init__.py  alibi.py
tests/: attention_test.py
