[tool.poetry]
name = "flaxattention"
version = "0.0.1"
description = "Porting flex-attention to pure JAX."
authors = ["ZincCat"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zinccat/flaxattention"
homepage = "https://github.com/zinccat/flaxattention"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.34"

[tool.poetry.extras]
viz = [
    "matplotlib",
    "numpy",
    "jsonargparse",
    "docstring-parser"
]

[tool.mypy]
disable_error_code = "import-untyped"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"